2022-03-09  Per Arne Vollan  <pvollan@apple.com>

        The accessibility library should be soft linked optionally
        https://bugs.webkit.org/show_bug.cgi?id=236513

        Reviewed by Geoffrey Garen.

        The accessibility library should be soft linked optionally, since it is not always present.

        * Shared/Cocoa/AuxiliaryProcessCocoa.mm:
        (WebKit::handleAXPreferenceChange):
        (WebKit::AuxiliaryProcess::handlePreferenceChange):

2022-03-09  Don Olmstead  <don.olmstead@sony.com>

        [CMake] Associate platform specific configuration with WinCairo
        https://bugs.webkit.org/show_bug.cgi?id=237668

        Reviewed by Basuke Suzuki.

        Move all cairo and curl platform configuration under a check for WinCairo. This arranges
        platform config in a consistent manner.

        * PlatformWin.cmake:

2022-03-09  Sihui Liu  <sihui_liu@apple.com>

        File System Access: disallows names that are not permitted by underlying file system
        https://bugs.webkit.org/show_bug.cgi?id=237635
        rdar://89291566

        We use FileSystem::fileSystemRepresentation to convert input name to a name that is permitted in current file 
        system. This patch makes File System Access API to throw error if the input name does not match the converted 
        name. 

        Reviewed by Youenn Fablet.

        * NetworkProcess/storage/FileSystemStorageHandle.cpp:
        (WebKit::isValidFileName):
        (WebKit::FileSystemStorageHandle::requestCreateHandle):
        (WebKit::FileSystemStorageHandle::removeEntry):
        (WebKit::FileSystemStorageHandle::move):

2022-03-09  Jon Lee  <jonlee@apple.com>

        Update feature flags for WebGL
        https://bugs.webkit.org/show_bug.cgi?id=237666
        rdar://problem/90040981

        Reviewed by Geoffrey Garen.

        * FeatureFlags/WebKit-appletvos.plist:
        * FeatureFlags/WebKit-ios.plist:
        * FeatureFlags/WebKit-watchos.plist:
